@@ -1,3 +1,7 @@
+2020-07-21  Allen D. Ball  <ball@hcf.dev>
+
+	* pom.xml: Started development 2.1-SNAPSHOT.
+
 2020-07-15  Allen D. Ball  <ball@hcf.dev>
 
 	* pom.xml: Released version 2.0.0.
